--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.stefanvstein</groupId>
   <artifactId>grit</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
   <packaging>jar</packaging>
   <name>stonehorse.grit - simpler collections</name>
   <description>Persistent Collections for Java. Immutable
